--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="about">
       <h1>Hi, I'm Katikola Karthik<br/>Full stack developer</h1>
       <div class="icons">
-        <a href="https://www.instagram.com/__karthik_goud"><i class="fa-brands fa-instagram fa-2x"></i></a>
+        <a href="https://www.instagram.com/__karthik_goud?igsh=MXZnbmxjZTgxenA5dQ=="><i class="fa-brands fa-instagram fa-2x"></i></a>
         <a href="https://www.linkedin.com/in/katikola-karthik-"><i class="fa-brands fa-linkedin fa-2x"></i></a>
         <a href="https://github.com/katikolakarthik"><i class="fa-brands fa-github fa-2x"></i></a>
       </div>
